// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigTestCases custom-modules json-custom exported tests should transform toml to json 1`] = `
Object {
  "owner": Object {
    "bio": "GitHub Cofounder & CEO
Likes tater tots and beer.",
    "dob": "1979-05-27T07:32:00.000Z",
    "name": "Tom Preston-Werner",
    "organization": "GitHub",
  },
  "title": "TOML Example",
}
`;

exports[`ConfigTestCases records issue-2991 exported tests should write relative paths to records 1`] = `
"{
  \\"chunks\\": {
    \\"byName\\": {
      \\"main\\": 179
    },
    \\"bySource\\": {},
    \\"usedIds\\": [
      179
    ]
  },
  \\"modules\\": {
    \\"byIdentifier\\": {
      \\"./test.js\\": 393,
      \\"external \\\\\\"fs\\\\\\"\\": 747,
      \\"external \\\\\\"path\\\\\\"\\": 622,
      \\"ignored|pkgs/somepackage/foo\\": 713
    },
    \\"usedIds\\": [
      393,
      622,
      713,
      747
    ]
  }
}"
`;

exports[`ConfigTestCases records issue-7339 exported tests should write relative dynamic-require paths to records 1`] = `
"{
  \\"chunks\\": {
    \\"byName\\": {
      \\"main\\": 179
    },
    \\"bySource\\": {},
    \\"usedIds\\": [
      179
    ]
  },
  \\"modules\\": {
    \\"byIdentifier\\": {
      \\"./dependencies/bar.js\\": 379,
      \\"./dependencies/foo.js\\": 117,
      \\"./dependencies|sync|/^\\\\\\\\.\\\\\\\\/.*$/\\": 412,
      \\"./test.js\\": 393,
      \\"external \\\\\\"fs\\\\\\"\\": 747,
      \\"external \\\\\\"path\\\\\\"\\": 622
    },
    \\"usedIds\\": [
      117,
      379,
      393,
      412,
      622,
      747
    ]
  }
}"
`;

exports[`ConfigTestCases wasm path-templates-async exported tests should use path template for async wasm modules 1`] = `
Array [
  "64929088be235eae57ab.1e503cb96ef8faab2831.1e503cb96ef8faab.wasm.wat.wat.wasm",
  "662.bundle0.js",
  "bundle0.js",
]
`;

exports[`ConfigTestCases wasm path-templates-sync exported tests should use path template for sync wasm modules 1`] = `
Array [
  "3424f3537e5c2dc54c24.c77fa9bb6931c5078810.c77fa9bb6931c507.wasm.wat.wat.wasm",
  "662.bundle0.js",
  "bundle0.js",
]
`;
